# family-assistant

./: .clang-format  .gitignore  CMakeLists.txt  README.md  credits.md  main.cpp
data/: accessmanager.cpp  accessmanager.h  activecasualtask.cpp  activecasualtask.h  activerecurringtask.cpp  activerecurringtask.h  activetask.cpp  activetask.h  dayofweek.h  duetask.cpp  duetask.h  kid.cpp  kid.h  kidmanager.cpp  kidmanager.h  metamanager.cpp  metamanager.h  preferenceentry.h  preferences.cpp  preferences.h  task.cpp  task.h  taskoccurence.h  taskoccurences.h  taskscheduler.cpp  taskscheduler.h  tasksmodel.cpp  tasksmodel.h  taskstate.h  theme.cpp  theme.h  themecategory.h  user.cpp  user.h  usermanager.cpp  usermanager.h
hardware/: backlightmanager.cpp  backlightmanager.h  hardware.cpp  hardware.h
hardware/fingerprintreader/: fingerprintreadercommands.h  fingerprintreadercommandsqueue.cpp  fingerprintreaderheader.h  fingerprintreaderinterface.cpp  fingerprintreaderinterface.h
hardware/fingerprintreader/commands/: addfingerprintcommand.cpp  addfingerprintcommand.h  basefingerprintcommand.cpp  basefingerprintcommand.h  checkfingerprintcommand.cpp  checkfingerprintcommand.h  fingerprintaddingmodecommand.cpp  fingerprintaddingmodecommand.h  getuserscountcommand.cpp  getuserscountcommand.h  sendusercommand.cpp  sendusercommand.h
hardware/physical/: physicalhardware.cpp  physicalhardware.h
hardware/physical/fingerprintreader/: fingerprintaddingmode.h  fingerprintreadercommanddatastreamer.cpp  fingerprintreadercommanddatastreamer.h  fingerprintreadercommands.h  fingerprintreadercommandsqueue.cpp  fingerprintreadercommandsqueue.h  fingerprintreaderheader.cpp  fingerprintreaderheader.h  fingerprintreaderinterface.cpp  fingerprintreaderinterface.h  fingerprintreaderresultcodes.h
hardware/physical/fingerprintreader/commands/: fingerprintaddingmodecommand.cpp  fingerprintaddingmodecommand.h
hardware/simulated/: simulatedhardware.cpp  simulatedhardware.h  simulatedhardwarewidget.cpp  simulatedhardwarewidget.h  simulatedhardwarewidget.ui
qml/: KidName.qml  KidTasksList.qml  KidTasksView.qml  Main.qml  MainView.qml  MenuBar.qml  MenuBarButton.qml  Point.qml  PointsCounter.qml  PointsTransfer.qml  PopupDialog.qml  Rewards.qml  Settings.qml  StyledGradient.qml  Task.qml  TasksView.qml  TextOutline.qml  Vault.qml
qml/access/: ScanFingerprint.qml
qml/components/: BaseText.qml  ButtonShadow.qml  Carousel.qml  ChangeableImage.qml  ConfirmButton.qml  CornerButton.qml  Glow.qml  LargeText.qml  NormalText.qml  ProgressBar.qml  RandomMirror.qml  StyledGradient.qml  Tab.qml  UniqueItemContainer.qml  VerticalTabView.qml
qml/rewards/: Backgrounds.qml  NameTexts.qml  Points.qml  RewardsTab.qml  ThemeItemSelector.qml
qml/settings/: TaskControl.qml  TaskList.qml  Users.qml
qml/theme/background/: Blue.qml  City.qml  Farm.qml  Flowers.qml  FlowersStatic.qml  Green.qml  Henhouse.qml  Orange.qml  Pink.qml  Savanna.qml  Sky.qml  SkyWithClouds.qml  Stable.qml  White.qml
qml/theme/background/generic/: Animals.qml
qml/theme/font/: Agreloy.qml  AmberyGarden.qml  BudmoJiggler.qml  BurnstownDam.qml  Celtica.qml  DottyShadow.qml  GoodTiming.qml  HappyMemories.qml  Heartland.qml  KogniGear.qml  RetroStereoWide.qml  Saddlebag.qml  SnowtopCaps.qml  SuperCrafty.qml  SuperMystery.qml  SuperNormal.qml  SuperPlayful.qml  SuperScribble.qml  SupplyCenter.qml  TopSecret.qml  Ubuntu.qml  UrbanSlick.qml  Welbutrin.qml  ZtTalk.qml
qml/theme/font/generic/: Font.qml
qml/theme/point/: Burger.qml  Cash.qml  ChristmasGiftbox.qml  DollarCoin.qml  Euro.qml  Flower.qml  GemBlue.qml  GemBlueSparkling.qml  GemGreen.qml  GemGreenSparkling.qml  GemHeart.qml  GemHeartSparkling.qml  GemRed.qml  GemRedSparkling.qml  GiftBox.qml  Medal.qml  MoneyBag.qml  Poop.qml  Rainbow.qml  Ruby.qml  RubySparkling.qml  StarCoin.qml  Trophy.qml  Unicorn.qml  Zirconia.qml  ZirconiaSparkling.qml
qml/theme/points/: Burger.qml  Cash.qml  ChristmasGiftbox.qml  DollarCoin.qml  Euro.qml  Flower.qml  GemBlue.qml  GemBlueSparkling.qml  GemGreen.qml  GemGreenSparkling.qml  GemHeart.qml  GemHeartSparkling.qml  GemRed.qml  GemRedSparkling.qml  GiftBox.qml  Medal.qml  MoneyBag.qml  Poop.qml  Rainbow.qml  Ruby.qml  RubySparkling.qml  StarCoin.qml  Trophy.qml  Unicorn.qml  Zirconia.qml  ZirconiaSparkling.qml
qml/theme/points_storage/: Bank.qml  Bank2.qml  Diamonds.qml  GoldPile.qml  PiggyBank.qml  Refrigerator.qml  SafeBox.qml  StrongBox.qml  Toilet.qml  Treasure.qml  Treasure2.qml  Wallet.qml  Wealth.qml
qml/theme/text_style/: Black.qml  Blue.qml  Green.qml  Orange.qml  Pink.qml  Rainbow.qml  RainbowAnimated.qml  White.qml
resources/shaders/: text_mask.frag  text_outline.frag
test/: config-2kids.json
utils/: json.cpp  json.h
